--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -11,8 +11,8 @@ inputs:
   # Environment variables
   env:
     # AWS DynamoDB Table name. Needed for the code to access it.
-    db: ${output:database.name}
+    db: ${output:db-users.name}
     # AWS DynamoDB Table Index name. Needed for the code to access it.
-    dbIndex1: ${output:database.indexes.gsi1.name}
+    dbIndex1: ${output:db-users.indexes.gsi1.name}
     # A secret token to sign the JWT tokens with.
     tokenSecret: secret_1234 # Change to secret via environment variable: ${env:tokenSecret}
