--- a/permissions/serverless.yml
+++ b/permissions/serverless.yml
@@ -2,7 +2,7 @@ component: aws-iam-role
 name: permissions
 
 inputs:
-  name: ${name}-${stage}
+  name: commoners-help-${name}-${stage}
   region: us-east-1
   service: lambda.amazonaws.com
   policy:
@@ -24,5 +24,5 @@ inputs:
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
       Resource:
-        - ${output:database.arn}
-        - ${output:database.arn}/index/*
+        - ${output:db-users.arn}
+        - ${output:db-users.arn}/index/*
