--- a/site/package.json
+++ b/site/package.json
@@ -19,7 +19,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
